
  * (Something about more specific parser bundles, plus an overall one)

  MINOR CHANGES

    * Upgrade rome to 1.5.1 (TIKA-1820)

    * The default LoadErrorHandler is now WARN, to alert you to missing
      parser classes and their dependencies. To keep the old behaviour,
      set your LoadErrorHandler to IGNORE. (TIKA-1805)

Release 1.15 -???

  * Added tika-eval module (TIKA-1332).

  * Add parsers for EMF/WMF files (TIKA-2246/TIKA-2247).

  * Official mime types for BMP, EMF and WMF have been registered with
    IANA, so switch to these (image/bmp image/emf image/wmf) (TIKA-2250)

  * Be more parsimonious with BufferedInputStreams via Josh Hight
    (TIKA-2244).

  * Enable handling of underscored language codes (e.g. "chi_tra")
    in TesseractOCRParser via Graham Russell (TIKA-2231).

  * Improve style tags in ODT (TIKA-2242).

  * Add container detection for embedded MSEquation files (TIKA-2238).

  * Add parsing of JBIG2 and extraction of JBIG2 from PDFs when
    required dependencies are added to class path by user.
    Contributed by Pascal Essiembre (TIKA-2232).

  * Mime magic for the OneNote family (.one / .onetoc / .onepkg), no parser
    (TIKA-2224).

  * Add parsers for WordPerfect and QuattroPro (.qpw) files.
    Contributed by Pascal Essiembre (TIKA-1946).

  * Add configurability of "preserve-interword-spacing" to
    TesseractOCRParser (TIKA-2190).

  * Added experimental SAX parser for .pptx files. To select this parser,
    set useSAXPptxExtractor(true) on OfficeParserConfig (TIKA-2210).

  * Allow extraction of PDActions (including Javascript) from
    PDFs (TIKA-2090).

  * Change default behavior in experimental .docx parser to ignore
    deleted text to align with .doc (TIKA-2187).

  * Added experimental SAX parser for .docx files. To select this parser,
    set useSAXDocxExtractor(true) on OfficeParserConfig (TIKA-1321).

  * Change default behavior to parse embedded documents even if the user