@@ -19,6 +19,8 @@ Release 1.15 -???
 
   * Added tika-eval module (TIKA-1332).
 
+  * Fix potential NPE in FeedParser via Julien Nioche (TIKA-2269).
+
   * Add parsers for EMF/WMF files (TIKA-2246/TIKA-2247).
 
   * Official mime types for BMP, EMF and WMF have been registered with
